appointment, fulfilment, assurance: public boundaries typed — 23 untyped public returns and 14 raw-map bodies to 0
Slots, bookings, the roster and derived capacity, the schedule
configuration and the field-service seam typed on the provider
interface; shipping and work orders, carrier events, configuration and
pickup points; alarms, service problems, SLA terms and the violation
ledger. 183 endpoints snapshotted against zero noise floors: 181
byte-identical, 0 key-order-only, 0 structural.

The two intended changes are one bug: erasing a party's appointments
with no identifier used to build the literal string "null", answer 200
and delete nothing. Typed honestly that null reaches the query as
"owner party is empty", which is true of every guest booking. It now
refuses the request. Fourth of this family after the cart, the console
and payment.

TMF642 and TMF656 kits at their pre-change counts, verified by running
the old image again after the new one. The storefront suite now passes
end to end for the first time this week. fulfilment gains its first
test directory.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01LQKZAnw3Q6RaGRkmVxTrSc